@@ -2,6 +2,11 @@
 VERSION 0.7.2cvs
 ================
 
+2005-10-19  Vincent Richard  <vincent@vincent-richard.net>
+
+ * charsetConverter.{hpp|cpp}: new object 'charsetConverter' for converting
+   between charsets (code moved from static functions in 'charset' class).
+
 2005-10-16  Vincent Richard  <vincent@vincent-richard.net>
 
  * SConstruct: fixed compilation problems on FreeBSD (thanks to Xin LI).
